tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_cloudformation_wrong_element_count.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
CloudFormation error: !Join expects a 2-element array, found string @ example-templates/errors/cloudformation-wrong-element-count.yaml:17:25 (errno: ERR_7001)
  -> invalid CloudFormation intrinsic function

  16 |       # Invalid !Join - only has one element instead of [delimiter, array]
  17 |       BucketName: !Join ["-"]
     |                         ^^^^ invalid CloudFormation tag
  18 |         

   !Join expects [delimiter, array] with exactly 2 elements
   example: Name: !Join ['-', [!Ref 'AWS::StackName', 'suffix']]

   For more info: iidy explain ERR_7001
