tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_map_missing_template.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: 'template' missing in !$map tag @ example-templates/errors/map-missing-template.yaml:2:11 (errno: ERR_4002)
  -> add 'template' field to !$map tag

   1 | # !$map with missing template field error
   2 | test_map: !$map
   3 |   items: ["a", "b", "c"]

   example:
   !$map
     items: [1, 2, 3]
     template: "{{item}}"
   For more info: iidy explain ERR_4002
