tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_maplisttohash_missing_field.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: 'template' missing in !$mapListToHash tag @ example-templates/errors/maplisttohash-missing-field.yaml:2:21 (errno: ERR_4002)
  -> add 'template' field to !$mapListToHash tag

   1 | # !$mapListToHash missing required field
   2 | test_mapListToHash: !$mapListToHash
   3 |   items: [{"key": "a", "value": 1}]

   example:
   !$mapListToHash
     items: [{"key": "a", "value": 1}, {"key": "b", "value": 2}]
     keyPath: key
     valuePath: value
   For more info, run: iidy explain ERR_4002
